fix(medicines.html): align h1

--- a/css/medicines.css
+++ b/css/medicines.css
@@ -80,7 +80,7 @@
   }
 
 
-  .title{
+  section h1{
       text-align: left;
   }
 
